# jax-code

./: main.py  pyproject.toml
codebase/: data_lib.py
notebooks/: 01_jax_fundamentals.ipynb  02_neural_modules.ipynb  03_advanced_layers_and_moe.ipynb  04_sharding_and_parallelism.ipynb  05_training_and_rl.ipynb  06_build_your_own_model.ipynb
scripts/: generate_notebooks.py  setup_assets.py
