[project]
name = "jax-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.4.0",
    "datasets>=4.8.4",
    "deprecated>=1.3.1",
    "einops>=0.8.2",
    "grain>=0.2.16",
    "huggingface-hub>=1.8.0",
    "jax>=0.9.2",
    "jupyterlab>=4.5.6",
    "orbax>=0.1.9",
    "sentencepiece>=0.2.1",
    "setuptools<81",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "tokenizers>=0.22.2",
    "wandb>=0.25.0",
]
